# RedTextFramework

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.txt  librarys  main.cpp  test.cpp
RTF++/: CMakeLists.txt  RedTextFramework
RTF++/cmake/: main.cmake
RTF++/cmake/Linux/: platform.cmake
RTF++/inc/Implementation/RTD/Containers/: Pair.h  SharedList.h  SharedVector.h
RTF++/inc/Implementation/RTD/Events/: Event.h
RTF++/inc/Implementation/RTD/Exceptions/: Exception.h
RTF++/inc/Implementation/RTD/Math/: Vector.h
RTF++/inc/Implementation/RTD/Memory/: ASharedPointer.h  SharedPointer.h
RTF++/inc/Implementation/RTD/Strings/: SharedString.h  String.h
RTF++/inc/Implementation/RTD/Types/: APointer.h  ASharedPointer.h  Memory.h  RObject.h  SharedPointer.h  Vector.h
RTF++/inc/Interface/: RTF.h
RTF++/inc/Interface/RTD/Containers/: IIterator.h
RTF++/inc/Interface/RTD/Events/: Event.h  IEvent.h
RTF++/inc/Interface/RTD/Exceptions/: Exception.h
RTF++/inc/Interface/RTD/Math/: IVector.h
RTF++/inc/Interface/RTD/Memory/: ISharedPointer.h
RTF++/inc/Interface/RTD/Strings/: IString.h
RTF++/inc/Interface/RTD/Types/: IAPointer.h  IASharedPointer.h  IRObject.h  IVector.h
RTF++/inc/Tests/RTF/: Tests.h
RTF++/src/: src.cmake
RTF++/src/RTD/: RTD.cmake
RTF++/src/RTD/Exceptions/: Exception.cpp  Exceptions.cmake  IException.cpp
RTF++/src/RTD/Math/: Math.cmake  SharedVector.cpp  Vector.cpp
RTF++/src/RTD/Strings/: SharedString.cpp  String.cpp  Strings.cmake
RTF++/src/RTD/Types/: APointer.cpp  RObject.cpp  Types.cmake
RTF++/src/Tests/: Tests.cmake  Tests.cpp
RTF++/src/Tests/RTD/: ASharedPointer.cpp  RTD.cmake  SharedPointer.cpp
RTF_PP/: CMakeLists.txt
RTF_PP/cmake/: main.cmake
RTF_PP/cmake/Windows/: platform.cmake
RTF_PP/inc/Implementation/RTD/Containers/: Iterator.h  Vector.h
RTF_PP/inc/Implementation/RTD/Exceptions/: Exception.h
RTF_PP/inc/Implementation/RTD/Math/: Vector.h
RTF_PP/inc/Implementation/RTD/Memory/: ASharedPointer.h  Allocator.h  Memory.h  SharedPointer.h
RTF_PP/inc/Implementation/RTD/Strings/: BasicUTF8String.h  SharedString.h  String.h
RTF_PP/inc/Implementation/Tests/RTF/: Tests.h
RTF_PP/inc/Interface/Platform/Graphics/: IWindow.h
RTF_PP/inc/Interface/RTD/: RTD.h
RTF_PP/inc/Interface/RTD/Containers/: ISharedList.h
RTF_PP/inc/Interface/RTD/Memory/: IAllocator.h  IMemory.h
RTF_PP/src/: src.cmake
RTF_PP/src/RTD/Strings/: SharedString.cpp
RTF_PP/src/RTD/Types/: RObject.cpp
RTF_PP/src/Tests/: Tests.cmake  Tests.cpp
RTF_PP/src/Tests/RTD/: ASharedPointer.cpp  BasicAllocator.cpp  BasicUtf8String.cpp  RTD.cmake  SharedPointer.cpp  SharedString.cpp
(+4 files in other folders)
